@@ -2,7 +2,11 @@
 
 * option echo for Database.new, adds a logger to STDOUT
 
-* enhance sequel shell utility to accept a log file parameter.
+* enhance sequel shell utility to accept a log file parameter, -h and -v parameters.
+
+
+
+
 
 * Find a shorter way for stuff like:
 
