@@ -1,3 +1,7 @@
+=== SVN
+
+* Implemented Dataset#grep method.
+
 === 1.0.10 (2008-02-13)
 
 * Fixed Datset#group_and_count to work inside a query block (#152).
